--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches: [main]
     tags: ['v*']
-  pull_request:
-    branches: [main]
 
 env:
   REGISTRY: ghcr.io
@@ -13,7 +11,7 @@ env:
 
 jobs:
   build-clients:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
 
@@ -39,7 +37,7 @@ jobs:
           path: dist/clients/
 
   build-frontend:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
 
@@ -65,7 +63,7 @@ jobs:
           path: frontend/dist/
 
   build-server:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [build-clients, build-frontend]
     permissions:
       contents: read
@@ -138,7 +136,7 @@ jobs:
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [build-clients, build-server]
     permissions:
       contents: write
